Fix options stretch
and center content on screen

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ html {
     height: 100vh;
 }
 body {
+    display: flex;
+    flex-direction:column;
     justify-content: center;
     text-align: center;
     height: 100vh;
@@ -49,20 +51,22 @@ h1 {
     align-items: center;
     gap: 3%;
     margin-bottom: 8em;
+    /* flex-wrap: wrap; */
 }
 
 .option {
     flex: 0 1 auto;
+    align-items:center;
     display: flex;
     width: 150px;
-    height: 150px;
+    height: auto;
     border: 0.5px solid rgba(152, 144, 144, 0.967);
     background-color: white;
     border-radius: 15px;
 }
 
 .option > img {
-    flex: 1 1 auto;
+    flex: 0 1 auto;
     width: 100%;
     height: 100%;
     border-radius: 15px;
